# routes/api/auth.php
@@ -4,17 +4,16 @@ declare(strict_types=1);
 
 use App\Http\Controllers\Auth\EmailVerificationNotificationController;
 use App\Http\Controllers\Auth\LoginController;
+use App\Http\Controllers\Auth\PasswordResetController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\VerifyEmailController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/login', LoginController::class)
-    ->middleware('guest')
-    ->name('login');
-
-Route::post('/register', RegisterController::class)
-    ->middleware(['guest'])
-    ->name('register');
+Route::middleware(['guest'])->group(function (): void {
+    Route::post('/login', LoginController::class)->name('login');
+    Route::post('/register', RegisterController::class)->name('register');
+    Route::post('/forgot-password', PasswordResetController::class)->name('password.email');
+});
 
 Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
     ->middleware(['signed', 'throttle:6,1'])
